implementing-quick-sort

--- a/views/sorted.ejs
+++ b/views/sorted.ejs
@@ -45,6 +45,12 @@
                
             </li>
             <li class="nav-item">
+              <button class="quick btn btn-outline-light">
+                  Quick
+              </button>
+             
+          </li>
+            <li class="nav-item">
                 <button class="insertion generate btn btn-outline-light">
                     insertion
                 </button> 
